# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
migrations/: 20240916111614_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
